--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,8 +97,7 @@ dependencies {
     compile 'com.facebook.fresco:animated-base-support:1.3.0'
     compile 'com.facebook.fresco:animated-gif:1.3.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.alibaba:fastjson:1.1.56.android'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    compile 'com.google.code.gson:gson:2.8.2'
     testCompile 'junit:junit:4.12'
     //公共库
     compile 'com.alibaba:fastjson:1.1.56.android'
