修改了服务器端youku视频的获取方式 以前是通过链接 现在改为使用source_name和 url字段来获取

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -170,7 +170,7 @@
         <activity
             android:name=".channel.ChannelActivity"
             android:label="@string/title_activity_channel"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
     </application>
 
 </manifest>
