--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 26
     buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.mmdkid.mmdkid"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 12
-        versionName '0.8.0'
+        versionCode 14
+        versionName '0.8.14'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
@@ -81,11 +81,11 @@ dependencies {
     compile files('libs/umeng/platforms/新浪完整版/libs/weiboSDKCore.jar')
     compile files('libs/umeng/shareboard/libs/umeng_social_shareboard.jar')
     compile files('libs/umeng/shareboard/libs/umeng_shareboard_widget.jar')
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.android.support:support-vector-drawable:25.3.1'
-    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:design:26.1.0'
+    compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.android.support:support-vector-drawable:26.1.0'
+    compile 'com.android.support:support-v4:26.1.0'
     compile 'com.roughike:bottom-bar:2.3.1'
     compile 'fm.jiecao:jiecaovideoplayer:5.5.4'
     compile 'com.google.android.gms:play-services-appindexing:9.8.0'
@@ -104,4 +104,5 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     //sdk
     compile(name: 'YoukuPlayerOpenSDK-release', ext: 'aar')
+    compile project(':PushSDK')
 }
