--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.mmdkid.mmdkid"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 25
-        versionName '0.8.25'
+        versionCode 26
+        versionName '0.8.26'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
@@ -102,7 +102,8 @@ dependencies {
     compile 'com.android.support:support-vector-drawable:26.1.0'
     compile 'com.android.support:support-v4:26.1.0'
     compile 'com.roughike:bottom-bar:2.3.1'
-    compile 'fm.jiecao:jiecaovideoplayer:5.5.4'
+    //compile 'fm.jiecao:jiecaovideoplayer:5.5.4'
+    compile 'cn.jzvd:jiaozivideoplayer:6.2.3'
     compile 'com.google.android.gms:play-services-appindexing:9.8.0'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.android.support:multidex:1.0.1'
@@ -123,4 +124,7 @@ dependencies {
     compile name: 'SMSSDK-3.0.0', ext: 'aar'
     compile name: 'SMSSDKGUI-3.0.0', ext: 'aar'
     compile project(':PushSDK')
+    compile 'com.zhihu.android:matisse:0.5.0-beta3'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'jp.wasabeef:richeditor-android:1.2.2'
 }
