--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
             android:authorities="com.mmdkid.mmdkid.providers.HistorySuggestionsProvider" />
         <provider
             android:name="android.support.v4.content.FileProvider"
-            android:authorities="com.mmdkid.mmdkid.fileprovider"
+            android:authorities="com.mmdkid.mmdkid.fileProvider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
