--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.mmdkid.mmdkid"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 29
-        versionName '0.8.29'
+        versionCode 30
+        versionName '0.8.30'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
@@ -81,52 +81,54 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile files('libs/umeng/umeng_social_api.jar')
-    compile files('libs/umeng/umeng_social_net.jar')
-    compile files('libs/umeng/umeng_social_tool.jar')
-    compile files('libs/umeng/open_sdk_r5788_lite.jar')
-    compile files('libs/umeng/SocialSDK_QQ_Full.jar')
-    compile files('libs/umeng/SocialSDK_WeiXin_Full.jar')
-    compile files('libs/umeng/wechat-sdk-android-with-mta-1.1.6.jar')
-    compile files('libs/umeng/SocialSDK_Sina_Full.jar')
-    compile files('libs/umeng/weiboSDKCore.jar')
-    compile files('libs/umeng/umeng_social_shareboard.jar')
-    compile files('libs/umeng/umeng_shareboard_widget.jar')
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.android.support:cardview-v7:26.1.0'
-    compile 'com.android.support:support-vector-drawable:26.1.0'
-    compile 'com.android.support:support-v4:26.1.0'
-    compile 'com.roughike:bottom-bar:2.3.1'
-    //compile 'fm.jiecao:jiecaovideoplayer:5.5.4'
-    compile 'cn.jzvd:jiaozivideoplayer:6.2.3'
-    compile 'com.google.android.gms:play-services-appindexing:9.8.0'
-    compile 'com.android.volley:volley:1.0.0'
-    compile 'com.android.support:multidex:1.0.1'
-    compile 'com.squareup.okhttp3:okhttp:3.6.0'
-    compile 'com.github.stfalcon:frescoimageviewer:0.5.0'
-    compile 'com.facebook.fresco:fresco:1.3.0'
-    compile 'com.facebook.fresco:animated-base-support:1.3.0'
-    compile 'com.facebook.fresco:animated-gif:1.3.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.code.gson:gson:2.8.2'
-    testCompile 'junit:junit:4.12'
+    implementation files('libs/umeng/umeng_social_api.jar')
+    implementation files('libs/umeng/umeng_social_net.jar')
+    implementation files('libs/umeng/umeng_social_tool.jar')
+    implementation files('libs/umeng/open_sdk_r5788_lite.jar')
+    implementation files('libs/umeng/SocialSDK_QQ_Full.jar')
+    implementation files('libs/umeng/SocialSDK_WeiXin_Full.jar')
+    implementation files('libs/umeng/wechat-sdk-android-with-mta-1.1.6.jar')
+    implementation files('libs/umeng/SocialSDK_Sina_Full.jar')
+    implementation files('libs/umeng/weiboSDKCore.jar')
+    implementation files('libs/umeng/umeng_social_shareboard.jar')
+    implementation files('libs/umeng/umeng_shareboard_widget.jar')
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.android.support:support-vector-drawable:26.1.0'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.roughike:bottom-bar:2.3.1'
+    //implementation 'fm.jiecao:jiecaovideoplayer:5.5.4'
+    implementation 'cn.jzvd:jiaozivideoplayer:6.2.3'
+    implementation 'com.google.android.gms:play-services-appindexing:9.8.0'
+    implementation 'com.android.volley:volley:1.0.0'
+    implementation 'com.android.support:multidex:1.0.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.6.0'
+    implementation 'com.github.stfalcon:frescoimageviewer:0.5.0'
+    implementation 'com.facebook.fresco:fresco:1.3.0'
+    implementation 'com.facebook.fresco:animated-base-support:1.3.0'
+    implementation 'com.facebook.fresco:animated-gif:1.3.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    testImplementation 'junit:junit:4.12'
     //公共库
-    compile 'com.alibaba:fastjson:1.1.56.android'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    implementation 'com.alibaba:fastjson:1.1.56.android'
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     //sdk
-    compile(name: 'YoukuPlayerOpenSDK-release', ext: 'aar')
+    implementation(name: 'YoukuPlayerOpenSDK-release', ext: 'aar')
     // mob
-    compile name: 'SMSSDK-3.0.0', ext: 'aar'
-    compile name: 'SMSSDKGUI-3.0.0', ext: 'aar'
-    compile project(':PushSDK')
-    compile 'com.zhihu.android:matisse:0.5.0-beta3'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'jp.wasabeef:richeditor-android:1.2.2'
+    implementation name: 'SMSSDK-3.0.0', ext: 'aar'
+    implementation name: 'SMSSDKGUI-3.0.0', ext: 'aar'
+    implementation project(':PushSDK')
+    implementation 'com.zhihu.android:matisse:0.5.0-beta3'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'jp.wasabeef:richeditor-android:1.2.2'
     // 权限控制
-    compile 'com.yanzhenjie:permission:2.0.0-rc3'
+    implementation 'com.yanzhenjie:permission:2.0.0-rc3'
+    // Badge view
+    implementation 'q.rorbin:badgeview:1.1.3'
 }
