--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.mmdkid.mmdkid"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 41
-        versionName '0.8.41'
+        versionCode 45
+        versionName '0.8.45'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
@@ -140,4 +140,6 @@ dependencies {
     implementation 'q.rorbin:badgeview:1.1.3'
     // 图像裁剪
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
+    // 图像压缩
+    implementation 'id.zelory:compressor:2.1.0'
 }
